--- a/Education.html
+++ b/Education.html
@@ -9,28 +9,32 @@
 <main>
 	<header>
 	<div class="profile">
-        <a href="index.html"><i class="fa fa-glass" aria-hidden="true"></i>
+        <a href="index.html"><i class="fa fa-glass fa-2x" aria-hidden="true"></i>
 		<div>Profile</div></a>
 	</div>
 	<div class="Education">
-	<a href="Education.html"><i class="fa fa-graduation-cap" aria-hidden="true"></i>
+	<a href="Education.html"><i class="fa fa-graduation-cap fa-2x" aria-hidden="true"></i>
     <div>Education</div></a>
 	</div>
 	<div class="Experience">
-	<a href="experience.html"><i class="fa fa-black-tie" aria-hidden="true"></i>
+	<a href="experience.html"><i class="fa fa-black-tie fa-2x" aria-hidden="true"></i>
 		<div>Experience</div></a>
 	</div>
 	<div class="Skills">
-	<a href="skills.html"><i class="fa fa-fighter-jet" aria-hidden="true"></i>
+	<a href="skills.html"><i class="fa fa-fighter-jet fa-2x" aria-hidden="true"></i>
 	<div>Skills</div></a>
 	</div>
 </header>
-<i class="fa fa-graduation-cap" aria-hidden="true"></i>
-<div>2015 
-Graduated From School</div>
-<i class="fa fa-graduation-cap" aria-hidden="true"></i>
-<div>2015-2019 
-Graduated From college</div>
+<div class="school">
+<i class="fa fa-graduation-cap fa-2x" aria-hidden="true"> 2015
+</i>
+<h4>Graduated From School</h4>
+</div>
+<div class="college"> 
+<i class="fa fa-graduation-cap fa-2x" aria-hidden="true"> 2015-2019
+</i>
+<h4>Graduated From college</h4>
+</div>
 <footer>
 	<h3>Resume</h3>
 	<h4>@Naveen Yadav</h4>
