--- a/experience.html
+++ b/experience.html
@@ -10,19 +10,19 @@
 <main>
 	<header>
 	<div class="profile">
-        <a href="index.html"><i class="fa fa-glass" aria-hidden="true"></i>
+        <a href="index.html"><i class="fa fa-glass fa-2x" aria-hidden="true"></i>
 		<div>Profile</div></a>
 	</div>
 	<div class="Education">
-	<a href="Education.html"><i class="fa fa-graduation-cap" aria-hidden="true"></i>
+	<a href="Education.html"><i class="fa fa-graduation-cap fa-2x" aria-hidden="true"></i>
     <div>Education</div></a>
 	</div>
 	<div class="Experience">
-	<a href="experience.html"><i class="fa fa-black-tie" aria-hidden="true"></i>
+	<a href="experience.html"><i class="fa fa-black-tie fa-2x" aria-hidden="true"></i>
 		<div>Experience</div></a>
 	</div>
 	<div class="Skills">
-	<a href="skills.html"><i class="fa fa-fighter-jet" aria-hidden="true"></i>
+	<a href="skills.html"><i class="fa fa-fighter-jet fa-2x" aria-hidden="true"></i>
 	<div>Skills</div></a>
 	</div>
 </header>
@@ -33,7 +33,7 @@
 		<li>Placement Portal and Many More .....</li>
 	</ul>
 </div>
-<i class="fa fa-fighter-jet" aria-hidden="true"></i>
+<i class="fa fa-fighter-jet fa-2x" aria-hidden="true"></i>
 
 <footer>
 	<h3>Resume</h3>
