--- a/experience.html
+++ b/experience.html
@@ -26,14 +26,14 @@
 	<div>Skills</div></a>
 	</div>
 </header>
-<div>
+<div class="experience">
+    <i class="fa fa-black-tie fa-2x" aria-hidden="true"></i>
 	<h4>I have Previlage to work with university projects</h4>
 	<ul>
 		<li>Online Voting System</li>
 		<li>Placement Portal and Many More .....</li>
 	</ul>
 </div>
-<i class="fa fa-fighter-jet fa-2x" aria-hidden="true"></i>
 
 <footer>
 	<h3>Resume</h3>
