anish some css1

--- a/experience.html
+++ b/experience.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<main>
+<main class="main">
 	<header>
 	<div class="profile">
         <a href="index.html"><i class="fa fa-glass" aria-hidden="true"></i>
