--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<main>
+<main class="main">
 	<header>
 	<div class="profile">
         <a href="index.html"><i class="fa fa-glass fa-2x" aria-hidden="true"></i>
@@ -37,10 +37,7 @@
 <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 </div>
-<footer>
-	<h3>Resume</h3>
-	<h4>@Naveen Yadav</h4>
-</footer>
+<footer><p>Made with <text style="color: yellow">&#10084;</text> by ny826</p></footer>
 </main>
 
 </body>
