making social icon larger

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 <div class="born">Born And Raised In New Delhi</div>
 
 <div class="social">
-<a href="https://github.com/ny826"><i class="fa fa-github" aria-hidden="true"></i></a>
-<a href="https://www.linkedin.com/in/naveen-yadav-309618118/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-<a href="https://www.facebook.com/ny826"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-<a href="https://www.linkedin.com/in/naveen-yadav-309618118/"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-<a href="https://www.instagram.com/n_vi_n/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+<a href="https://github.com/ny826"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+<a href="https://www.linkedin.com/in/naveen-yadav-309618118/"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+<a href="https://www.facebook.com/ny826"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
+<a href="https://www.linkedin.com/in/naveen-yadav-309618118/"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+<a href="https://www.instagram.com/n_vi_n/?hl=en"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
 </div>
 <footer>
 	<h3>Resume</h3>
