--- a/Education.html
+++ b/Education.html
@@ -10,19 +10,19 @@
 	<header>
 	<div class="profile">
         <a href="index.html"><i class="fa fa-glass fa-2x" aria-hidden="true"></i>
-		<div>Profile</div></a>
+		<div class="ye">Profile</div></a>
 	</div>
 	<div class="Education">
 	<a href="Education.html"><i class="fa fa-graduation-cap fa-2x" aria-hidden="true"></i>
-    <div>Education</div></a>
+    <div class="ye">Education</div></a>
 	</div>
 	<div class="Experience">
 	<a href="experience.html"><i class="fa fa-black-tie fa-2x" aria-hidden="true"></i>
-		<div>Experience</div></a>
+		<div class="ye">Experience</div></a>
 	</div>
 	<div class="Skills">
 	<a href="skills.html"><i class="fa fa-fighter-jet fa-2x" aria-hidden="true"></i>
-	<div>Skills</div></a>
+	<div class="ye">Skills</div></a>
 	</div>
 </header>
 <div class="school">
