--- a/index.html
+++ b/index.html
@@ -11,25 +11,29 @@
 	<header>
 	<div class="profile">
         <a href="index.html"><i class="fa fa-glass fa-2x" aria-hidden="true"></i>
-		<div>Profile</div></a>
+		<div class="ye">Profile</div></a>
 	</div>
 	<div class="Education">
 	<a href="Education.html"><i class="fa fa-graduation-cap fa-2x" aria-hidden="true"></i>
-    <div>Education</div></a>
+    <div class="ye">Education</div></a>
 	</div>
 	<div class="Experience">
 	<a href="experience.html"><i class="fa fa-black-tie fa-2x" aria-hidden="true"></i>
-		<div>Experience</div></a>
+		<div class="ye">Experience</div></a>
 	</div>
 	<div class="Skills">
 	<a href="skills.html"><i class="fa fa-fighter-jet fa-2x" aria-hidden="true"></i>
-	<div>Skills</div></a>
+	<div class="ye">Skills</div></a>
 	</div>
 </header>
 <div class="image"><img src="me.jpg"></div>
 <div class="name">Naveen Yadav</div>
 <div class="born">Born And Raised In New Delhi</div>
 
+<div class="experience">
+	<div class="count">3</div>
+	<div class="num">Months Of Experience in Web Development</div>
+</div>
 <div class="social">
 <a href="https://github.com/ny826"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
 <a href="https://www.linkedin.com/in/naveen-yadav-309618118/"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
