--- a/skills.html
+++ b/skills.html
@@ -10,31 +10,39 @@
 	<header>
 	<div class="profile">
         <a href="index.html"><i class="fa fa-glass fa-2x" aria-hidden="true"></i>
-		<div>Profile</div></a>
+		<div class="ye">Profile</div></a>
 	</div>
 	<div class="Education">
 	<a href="Education.html"><i class="fa fa-graduation-cap fa-2x" aria-hidden="true"></i>
-    <div>Education</div></a>
+    <div class="ye">Education</div></a>
 	</div>
 	<div class="Experience">
 	<a href="experience.html"><i class="fa fa-black-tie fa-2x" aria-hidden="true"></i>
-		<div>Experience</div></a>
+		<div class="ye">Experience</div></a>
 	</div>
 	<div class="Skills">
 	<a href="skills.html"><i class="fa fa-fighter-jet fa-2x" aria-hidden="true"></i>
-	<div>Skills</div></a>
+	<div class="ye">Skills</div></a>
 	</div>
-</header>
-<div class="userdetails">
+</header>s
+<div class="userdetails">Proficient
 <ul>
 	<li>Java</li>
-	<li>C++</li>
 	<li>Ruby</li>
 	<li>Html</li>
 	<li>Css</li>
 	<li>Javascript</li>
 </ul>
+
 </div>
+<div class="userdetails">Familar
+<ul>
+	<li>python</li>
+	<li>Android</li>
+	<li>C++</li>
+</ul>
+</div>
+
 <footer>
 	<h3>Resume</h3>
 	<h4>@Naveen Yadav</h4>
